src/main/java/com/tinkerpop/gremlin/compiler/GremlinParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g 2010-11-02 18:33:57

package com.tinkerpop.gremlin.compiler;

import com.tinkerpop.gremlin.compiler.exceptions.SyntaxErrorException;
import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;

public class GremlinParser extends Parser {
    public static final String[] tokenNames = new String[]{"<invalid>", "<EOR>", "<DOWN>", "<UP>", "VAR", "ARG", "ARGS", "FUNC", "NS", "NAME", "FUNC_NAME", "GPATH", "NATIVE_STEP", "STEP", "TOKEN", "PREDICATE", "PREDICATES", "SELF", "HISTORY", "FUNC_CALL", "RETURN", "IF", "ELSE", "COND", "BLOCK", "NATIVE", "FOREACH", "WHILE", "REPEAT", "INCLUDE", "SCRIPT", "INT", "LONG", "FLOAT", "DOUBLE", "STR", "ARR", "BOOL", "NULL", "RANGE", "PROPERTY_CALL", "VARIABLE_CALL", "COLLECTION_CALL", "COMMENT", "NEWLINE", "G_INT", "G_LONG", "G_FLOAT", "G_DOUBLE", "StringLiteral", "PROPERTY", "VARIABLE", "IDENTIFIER", "BOOLEAN", "DoubleStringCharacter", "SingleStringCharacter", "WS", "EscapeSequence", "CharacterEscapeSequence", "HexEscapeSequence", "UnicodeEscapeSequence", "SingleEscapeCharacter", "NonEscapeCharacter", "EscapeCharacter", "DecimalDigit", "HexDigit", "'/'", "'['", "']'", "'..'", "'('", "')'", "'{'", "';'", "'}'", "':='", "'and'", "'or'", "'include'", "'script'", "'if'", "'else'", "'end'", "'foreach'", "'in'", "'while'", "'repeat'", "'step'", "'func'", "','", "'return'", "'='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'div'", "'mod'", "':'"};
    public static final int WHILE = 27;
    public static final int DecimalDigit = 64;
    public static final int EOF = -1;
    public static final int FUNC_CALL = 19;
    public static final int SingleStringCharacter = 55;
    public static final int TOKEN = 14;
    public static final int T__93 = 93;
    public static final int HISTORY = 18;
    public static final int T__94 = 94;
    public static final int T__91 = 91;
    public static final int T__92 = 92;
    public static final int NAME = 9;
    public static final int T__90 = 90;
    public static final int ARG = 5;
    public static final int G_INT = 45;
    public static final int SingleEscapeCharacter = 61;
    public static final int INCLUDE = 29;
    public static final int RETURN = 20;
    public static final int ARGS = 6;
    public static final int DOUBLE = 34;
    public static final int VAR = 4;
    public static final int GPATH = 11;
    public static final int COMMENT = 43;
    public static final int T__99 = 99;
    public static final int T__98 = 98;
    public static final int T__97 = 97;
    public static final int T__96 = 96;
    public static final int T__95 = 95;
    public static final int SCRIPT = 30;
    public static final int T__80 = 80;
    public static final int T__81 = 81;
    public static final int T__82 = 82;
    public static final int T__83 = 83;
    public static final int NS = 8;
    public static final int NULL = 38;
    public static final int ELSE = 22;
    public static final int BOOL = 37;
    public static final int NATIVE = 25;
    public static final int INT = 31;
    public static final int ARR = 36;
    public static final int DoubleStringCharacter = 54;
    public static final int T__85 = 85;
    public static final int T__84 = 84;
    public static final int T__87 = 87;
    public static final int T__86 = 86;
    public static final int T__89 = 89;
    public static final int T__88 = 88;
    public static final int WS = 56;
    public static final int T__71 = 71;
    public static final int T__72 = 72;
    public static final int PREDICATES = 16;
    public static final int VARIABLE = 51;
    public static final int T__70 = 70;
    public static final int G_DOUBLE = 48;
    public static final int PROPERTY = 50;
    public static final int FUNC = 7;
    public static final int G_LONG = 46;
    public static final int FOREACH = 26;
    public static final int REPEAT = 28;
    public static final int CharacterEscapeSequence = 58;
    public static final int FUNC_NAME = 10;
    public static final int T__76 = 76;
    public static final int T__75 = 75;
    public static final int T__74 = 74;
    public static final int EscapeSequence = 57;
    public static final int T__73 = 73;
    public static final int T__79 = 79;
    public static final int T__78 = 78;
    public static final int T__77 = 77;
    public static final int T__68 = 68;
    public static final int T__69 = 69;
    public static final int T__66 = 66;
    public static final int T__67 = 67;
    public static final int HexEscapeSequence = 59;
    public static final int STEP = 13;
    public static final int FLOAT = 33;
    public static final int HexDigit = 65;
    public static final int PREDICATE = 15;
    public static final int IF = 21;
    public static final int STR = 35;
    public static final int BOOLEAN = 53;
    public static final int IDENTIFIER = 52;
    public static final int EscapeCharacter = 63;
    public static final int NATIVE_STEP = 12;
    public static final int COLLECTION_CALL = 42;
    public static final int G_FLOAT = 47;
    public static final int PROPERTY_CALL = 40;
    public static final int UnicodeEscapeSequence = 60;
    public static final int RANGE = 39;
    public static final int T__102 = 102;
    public static final int T__101 = 101;
    public static final int T__100 = 100;
    public static final int StringLiteral = 49;
    public static final int NEWLINE = 44;
    public static final int BLOCK = 24;
    public static final int NonEscapeCharacter = 62;
    public static final int COND = 23;
    public static final int LONG = 32;
    public static final int SELF = 17;
    public static final int VARIABLE_CALL = 41;

    // delegates
    // delegators


    public GremlinParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public GremlinParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);

    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() {
        return GremlinParser.tokenNames;
    }

    public String getGrammarFileName() {
        return "src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g";
    }


    public void reportError(RecognitionException e) {
        throw new SyntaxErrorException("Syntax error at " + e.line + "-" + e.charPositionInLine + ": " + this.getErrorMessage(e, this.getTokenNames()));
    }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "program"
    // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:91:1: program : ( ( COMMENT )+ | ( ( statement )? NEWLINE )+ );
    public final GremlinParser.program_return program() throws RecognitionException {
        GremlinParser.program_return retval = new GremlinParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token COMMENT1 = null;
        Token NEWLINE3 = null;
        GremlinParser.statement_return statement2 = null;


        CommonTree COMMENT1_tree = null;
        CommonTree NEWLINE3_tree = null;

        try {
            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:92:5: ( ( COMMENT )+ | ( ( statement )? NEWLINE )+ )
            int alt4 = 2;
            int LA4_0 = input.LA(1);

            if ((LA4_0 == COMMENT)) {
                alt4 = 1;
            } else if ((LA4_0 == NULL || (LA4_0 >= NEWLINE && LA4_0 <= BOOLEAN) || (LA4_0 >= 69 && LA4_0 <= 70) || (LA4_0 >= 78 && LA4_0 <= 80) || LA4_0 == 83 || (LA4_0 >= 85 && LA4_0 <= 88))) {
                alt4 = 2;
            } else {
                if (state.backtracking > 0) {
                    state.failed = true;
                    return retval;
                }
                NoViableAltException nvae = new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1:
                    // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:92:7: ( COMMENT )+
                {
                    root_0 = (CommonTree) adaptor.nil();

                    // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:92:7: ( COMMENT )+
                    int cnt1 = 0;
                    loop1:
                    do {
                        int alt1 = 2;
                        int LA1_0 = input.LA(1);

                        if ((LA1_0 == COMMENT)) {
                            alt1 = 1;
                        }


                        switch (alt1) {
                            case 1:
                                // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:0:0: COMMENT
                            {
                                COMMENT1 = (Token) match(input, COMMENT, FOLLOW_COMMENT_in_program316);
                                if (state.failed)
                                    return retval;
                                if (state.backtracking == 0) {
                                    COMMENT1_tree = (CommonTree) adaptor.create(COMMENT1);
                                    adaptor.addChild(root_0, COMMENT1_tree);
                                }

                            }
                            break;

                            default:
                                if (cnt1 >= 1)
                                    break loop1;
                                if (state.backtracking > 0) {
                                    state.failed = true;
                                    return retval;
                                }
                                EarlyExitException eee = new EarlyExitException(1, input);
                                throw eee;
                        }
                        cnt1++;
                    } while (true);


                }
                break;
                case 2:
                    // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:93:9: ( ( statement )? NEWLINE )+
                {
                    root_0 = (CommonTree) adaptor.nil();

                    // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:93:9: ( ( statement )? NEWLINE )+
                    int cnt3 = 0;
                    loop3:
                    do {
                        int alt3 = 2;
                        int LA3_0 = input.LA(1);

                        if ((LA3_0 == NULL || (LA3_0 >= NEWLINE && LA3_0 <= BOOLEAN) || (LA3_0 >= 69 && LA3_0 <= 70) || (LA3_0 >= 78 && LA3_0 <= 80) || LA3_0 == 83 || (LA3_0 >= 85 && LA3_0 <= 88))) {
                            alt3 = 1;
                        }


                        switch (alt3) {
                            case 1:
                                // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:93:10: ( statement )? NEWLINE
                            {
                                // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:93:10: ( statement )?
                                int alt2 = 2;
                                int LA2_0 = input.LA(1);

                                if ((LA2_0 == NULL || (LA2_0 >= G_INT && LA2_0 <= BOOLEAN) || (LA2_0 >= 69 && LA2_0 <= 70) || (LA2_0 >= 78 && LA2_0 <= 80) || LA2_0 == 83 || (LA2_0 >= 85 && LA2_0 <= 88))) {
                                    alt2 = 1;
                                }
                                switch (alt2) {
                                    case 1:
                                        // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:0:0: statement
                                    {
                                        pushFollow(FOLLOW_statement_in_program328);
                                        statement2 = statement();

                                        state._fsp--;
                                        if (state.failed)
                                            return retval;
                                        if (state.backtracking == 0)
                                            adaptor.addChild(root_0, statement2.getTree());

                                    }
                                    break;

                                }

                                NEWLINE3 = (Token) match(input, NEWLINE, FOLLOW_NEWLINE_in_program331);
                                if (state.failed)
                                    return retval;
                                if (state.backtracking == 0) {
                                    NEWLINE3_tree = (CommonTree) adaptor.create(NEWLINE3);
                                    adaptor.addChild(root_0, NEWLINE3_tree);
                                }

                            }
                            break;

                            default:
                                if (cnt3 >= 1)
                                    break loop3;
                                if (state.backtracking > 0) {
                                    state.failed = true;
                                    return retval;
                                }
                                EarlyExitException eee = new EarlyExitException(3, input);
                                throw eee;
                        }
                        cnt3++;
                    } while (true);


                }
                break;

            }
            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {

                retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class gpath_statement_return extends ParserRuleReturnScope {
        CommonTree tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "gpath_statement"
    // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:101:1: gpath_statement : step ( '/' step )* -> ^( GPATH ( step )+ ) ;
    public final GremlinParser.gpath_statement_return gpath_statement() throws RecognitionException {
        GremlinParser.gpath_statement_return retval = new GremlinParser.gpath_statement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal5 = null;
        GremlinParser.step_return step4 = null;

        GremlinParser.step_return step6 = null;


        CommonTree char_literal5_tree = null;
        RewriteRuleTokenStream stream_66 = new RewriteRuleTokenStream(adaptor, "token 66");
        RewriteRuleSubtreeStream stream_step = new RewriteRuleSubtreeStream(adaptor, "rule step");
        try {
            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:102:5: ( step ( '/' step )* -> ^( GPATH ( step )+ ) )
            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:102:7: step ( '/' step )*
            {
                pushFollow(FOLLOW_step_in_gpath_statement373);
                step4 = step();

                state._fsp--;
                if (state.failed)
                    return retval;
                if (state.backtracking == 0)
                    stream_step.add(step4.getTree());
                // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:102:12: ( '/' step )*
                loop5:
                do {
                    int alt5 = 2;
                    int LA5_0 = input.LA(1);

                    if ((LA5_0 == 66)) {
                        alt5 = 1;
                    }


                    switch (alt5) {
                        case 1:
                            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:102:13: '/' step
                        {
                            char_literal5 = (Token) match(input, 66, FOLLOW_66_in_gpath_statement376);
                            if (state.failed)
                                return retval;
                            if (state.backtracking == 0)
                                stream_66.add(char_literal5);

                            pushFollow(FOLLOW_step_in_gpath_statement378);
                            step6 = step();

                            state._fsp--;
                            if (state.failed)
                                return retval;
                            if (state.backtracking == 0)
                                stream_step.add(step6.getTree());

                        }
                        break;

                        default:
                            break loop5;
                    }
                } while (true);


                // AST REWRITE
                // elements: step
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                if (state.backtracking == 0) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                    root_0 = (CommonTree) adaptor.nil();
                    // 102:24: -> ^( GPATH ( step )+ )
                    {
                        // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:102:27: ^( GPATH ( step )+ )
                        {
                            CommonTree root_1 = (CommonTree) adaptor.nil();
                            root_1 = (CommonTree) adaptor.becomeRoot((CommonTree) adaptor.create(GPATH, "GPATH"), root_1);

                            if (!(stream_step.hasNext())) {
                                throw new RewriteEarlyExitException();
                            }
                            while (stream_step.hasNext()) {
                                adaptor.addChild(root_1, stream_step.nextTree());

                            }
                            stream_step.reset();

                            adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                }
            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {

                retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }
    // $ANTLR end "gpath_statement"

    public static class step_return extends ParserRuleReturnScope {
        CommonTree tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "step"
    // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:105:1: step : token ( '[' statement ']' )* ( gremlin_native_path_statement )* -> ^( STEP ^( TOKEN token ) ^( PREDICATES ( ^( PREDICATE statement ) )* ) ( gremlin_native_path_statement )* ) ;
    public final GremlinParser.step_return step() throws RecognitionException {
        GremlinParser.step_return retval = new GremlinParser.step_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal8 = null;
        Token char_literal10 = null;
        GremlinParser.token_return token7 = null;

        GremlinParser.statement_return statement9 = null;

        GremlinParser.gremlin_native_path_statement_return gremlin_native_path_statement11 = null;


        CommonTree char_literal8_tree = null;
        CommonTree char_literal10_tree = null;
        RewriteRuleTokenStream stream_67 = new RewriteRuleTokenStream(adaptor, "token 67");
        RewriteRuleTokenStream stream_68 = new RewriteRuleTokenStream(adaptor, "token 68");
        RewriteRuleSubtreeStream stream_statement = new RewriteRuleSubtreeStream(adaptor, "rule statement");
        RewriteRuleSubtreeStream stream_token = new RewriteRuleSubtreeStream(adaptor, "rule token");
        RewriteRuleSubtreeStream stream_gremlin_native_path_statement = new RewriteRuleSubtreeStream(adaptor, "rule gremlin_native_path_statement");
        try {
            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:106:5: ( token ( '[' statement ']' )* ( gremlin_native_path_statement )* -> ^( STEP ^( TOKEN token ) ^( PREDICATES ( ^( PREDICATE statement ) )* ) ( gremlin_native_path_statement )* ) )
            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:106:7: token ( '[' statement ']' )* ( gremlin_native_path_statement )*
            {
                pushFollow(FOLLOW_token_in_step404);
                token7 = token();

                state._fsp--;
                if (state.failed)
                    return retval;
                if (state.backtracking == 0)
                    stream_token.add(token7.getTree());
                // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:106:13: ( '[' statement ']' )*
                loop6:
                do {
                    int alt6 = 2;
                    int LA6_0 = input.LA(1);

                    if ((LA6_0 == 67)) {
                        alt6 = 1;
                    }


                    switch (alt6) {
                        case 1:
                            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:106:14: '[' statement ']'
                        {
                            char_literal8 = (Token) match(input, 67, FOLLOW_67_in_step407);
                            if (state.failed)
                                return retval;
                            if (state.backtracking == 0)
                                stream_67.add(char_literal8);

                            pushFollow(FOLLOW_statement_in_step409);
                            statement9 = statement();

                            state._fsp--;
                            if (state.failed)
                                return retval;
                            if (state.backtracking == 0)
                                stream_statement.add(statement9.getTree());
                            char_literal10 = (Token) match(input, 68, FOLLOW_68_in_step411);
                            if (state.failed)
                                return retval;
                            if (state.backtracking == 0)
                                stream_68.add(char_literal10);


                        }
                        break;

                        default:
                            break loop6;
                    }
                } while (true);

                // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:106:34: ( gremlin_native_path_statement )*
                loop7:
                do {
                    int alt7 = 2;
                    int LA7_0 = input.LA(1);

                    if ((LA7_0 == 72)) {
                        alt7 = 1;
                    }


                    switch (alt7) {
                        case 1:
                            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:106:36: gremlin_native_path_statement
                        {
                            pushFollow(FOLLOW_gremlin_native_path_statement_in_step417);
                            gremlin_native_path_statement11 = gremlin_native_path_statement();

                            state._fsp--;
                            if (state.failed)
                                return retval;
                            if (state.backtracking == 0)
                                stream_gremlin_native_path_statement.add(gremlin_native_path_statement11.getTree());

                        }
                        break;

                        default:
                            break loop7;
                    }
                } while (true);


                // AST REWRITE
                // elements: token, gremlin_native_path_statement, statement
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                if (state.backtracking == 0) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                    root_0 = (CommonTree) adaptor.nil();
                    // 107:13: -> ^( STEP ^( TOKEN token ) ^( PREDICATES ( ^( PREDICATE statement ) )* ) ( gremlin_native_path_statement )* )
                    {
                        // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:107:16: ^( STEP ^( TOKEN token ) ^( PREDICATES ( ^( PREDICATE statement ) )* ) ( gremlin_native_path_statement )* )
                        {
                            CommonTree root_1 = (CommonTree) adaptor.nil();
                            root_1 = (CommonTree) adaptor.becomeRoot((CommonTree) adaptor.create(STEP, "STEP"), root_1);

                            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:107:23: ^( TOKEN token )
                            {
                                CommonTree root_2 = (CommonTree) adaptor.nil();
                                root_2 = (CommonTree) adaptor.becomeRoot((CommonTree) adaptor.create(TOKEN, "TOKEN"), root_2);

                                adaptor.addChild(root_2, stream_token.nextTree());

                                adaptor.addChild(root_1, root_2);
                            }
                            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:107:38: ^( PREDICATES ( ^( PREDICATE statement ) )* )
                            {
                                CommonTree root_2 = (CommonTree) adaptor.nil();
                                root_2 = (CommonTree) adaptor.becomeRoot((CommonTree) adaptor.create(PREDICATES, "PREDICATES"), root_2);

                                // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:107:51: ( ^( PREDICATE statement ) )*
                                while (stream_statement.hasNext()) {
                                    // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:107:51: ^( PREDICATE statement )
                                    {
                                        CommonTree root_3 = (CommonTree) adaptor.nil();
                                        root_3 = (CommonTree) adaptor.becomeRoot((CommonTree) adaptor.create(PREDICATE, "PREDICATE"), root_3);

                                        adaptor.addChild(root_3, stream_statement.nextTree());

                                        adaptor.addChild(root_2, root_3);
                                    }

                                }
                                stream_statement.reset();

                                adaptor.addChild(root_1, root_2);
                            }
                            // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:107:76: ( gremlin_native_path_statement )*
                            while (stream_gremlin_native_path_statement.hasNext()) {
                                adaptor.addChild(root_1, stream_gremlin_native_path_statement.nextTree());

                            }
                            stream_gremlin_native_path_statement.reset();

                            adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                }
            }

            retval.stop = input.LT(-1);

            if (state.backtracking == 0) {

                retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
        }
        return retval;
    }
    // $ANTLR end "step"

    public static class token_return extends ParserRuleReturnScope {
        CommonTree tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "token"
    // src/main/java/com/tinkerpop/gremlin/compiler/Gremlin.g:110:1: token : ( G_INT -> ^( INT G_INT ) | G_LONG -> ^( LONG G_LONG ) | G_FLOAT -> ^( FLOAT G_FLOAT ) | G_DOUBLE -> ^( DOUBLE G_DOUBLE ) | function_call | StringLiteral -> ^( STR StringLiteral ) | PROPERTY -> ^( PROPERTY_CALL PROPERTY ) | VARIABLE -> ^( VARIABLE_CALL VARIABLE ) | IDENTIFIER | '..' | b= BOOLEAN -> ^( BOOL $b) | '(' statement ')' );
    public final GremlinParser.token_return token() throws RecognitionException {
        GremlinParser.token_return retval = new GremlinParser.token_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token b = null;
        Token G_INT12 = null;
        Token G_LONG13 = null;
        Token G_FLOAT14 = null;
        Token G_DOUBLE15 = null;
        Token StringLiteral17 = null;
        Token PROPERTY18 = null;
        Token VARIABLE19 = null;
        Token IDENTIFIER20 = null;
        Token string_literal21 = null;
        Token char_literal22 = null;
        Token char_literal24 = null;
        GremlinParser.function_call_return function_call16 = null;

        GremlinParser.statement_return statement23 = null;

